[gd_scene load_steps=5 format=3 uid="uid://b2fwjk6ksf7j6"]

[ext_resource type="Script" path="res://src/transition_layer.gd" id="1_tqmb7"]

[sub_resource type="Animation" id="Animation_jpqif"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition_color:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition_color:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_36p5k"]
resource_name = "fade_to_black"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition_color:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition_color:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o27gg"]
_data = {
"RESET": SubResource("Animation_jpqif"),
"fade_to_black": SubResource("Animation_36p5k")
}

[node name="transition_layer" type="CanvasLayer"]
layer = 2
script = ExtResource("1_tqmb7")

[node name="transition_color" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="fade_to_black" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o27gg")
}

[node name="reset_scene" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="reset_scene" to="." method="_on_reset_scene_timeout"]
